--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,49 @@
   </head>
 
   <body>
-    <% if !current_user.nil? %>
-      <div class="right-bar"><%= link_to "Logout", logout_path, method: :delete %></div>
-    <% end %>
+    <header>
+    <div class"container">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
+      <a class="navbar-brand" href="#">Scheduler App</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+      <% if !current_user.nil? %>
+        <li class="nav-item p-2">
+          <%= link_to "Logout", logout_path, method: :delete %>
+        </li>
+        <li class="nav-item p-2">
+          <%= link_to "Week", user_week_path(user_id: current_user.id, id: current_user.weeks.last)%>
+        </li>
+        <li>
+          <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="bottom" data-content="<%= form_with data: {'task-form' => true}, url: user_tasks_path(current_user.id) do |form| %>
+  <%= form.hidden_field :user_id, :value => current_user.id %>
+  <%= form.hidden_field :id, :value => params[:id] %>
+  <%= form.label :summary %>
+  <%= form.text_field :summary %>
+  <%= form.label :todo %>
+  <%= form.check_box :todo, {:checked => "checked"} %>
+  <%= form.label :daily_task %>
+  <%= check_box_tag :daily_task %>
+  <div id="todo_date" style="display:none;">
+    <%= form.label :date %>
+    <%= form.text_field :date, data:{ provide:'datepicker' } %>
+  </div>
+  <%= form.submit %>
+<% end %>">
+  New Task
+        </button>
+        </li>
+      <% end %>
+    </div>
+  </nav>
+</div>
+</header>
+  <div class="container">
     <%= yield %>
+  </div>
   </body>
 </html>
