Add day model and controller for task functionality

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -5,6 +5,7 @@
     background: "blue";
 }
 
-header a {
-    color: white;
+#complete_todo_list {
+    label {
+    text-decoration: line-through;}
 }
