--- a/app/views/weeks/show.html.erb
+++ b/app/views/weeks/show.html.erb
@@ -6,35 +6,22 @@
     <%= link_to "Next Week", user_weeks_path(user_id: current_user.id, id: params[:id]), method: :post %>
   </nav>
 </div>
-<div id="cal_grid">
-  <%= render 'cal_week' %>
+<div class="container">
+  <div class="row" id="cal_grid">
+    <%= render @days %>
+  </div>
 </div>
-
 <div class="container">
   <div class="card my-2">
     <div class="card-header">
       To Do
     </div>
-    <div class="card-body">
-      <% @todos.each do |t| %>
-        <%= t.summary %>
-      <% end %>
+    <div class="card-body" id="incomplete_todo_list">
+      <%= render @incomplete_todos %>
+    </div>
+    <hr>
+    <div class="card-body" id="complete_todo_list">
+      <%= render @complete_todos %>
     </div>
   </div>
 </div>
-
-<%= form_with data: {'task-form' => true}, url: user_tasks_path(current_user.id) do |form| %>
-  <%= form.hidden_field :user_id, :value => current_user.id %>
-  <%= form.hidden_field :id, :value => params[:id] %>
-  <%= form.label :summary %>
-  <%= form.text_field :summary %>
-  <%= form.label :todo %>
-  <%= form.check_box :todo, {:checked => "checked"} %>
-  <%= form.label :daily_task %>
-  <%= check_box_tag :daily_task %>
-  <div id="todo_date" style="display:none;">
-    <%= form.label :date %>
-    <%= form.text_field :date, data:{ provide:'datepicker' } %>
-  </div>
-  <%= form.submit %>
-<% end %>
