--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,33 +18,49 @@
       </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav ml-auto">
       <% if !current_user.nil? %>
         <li class="nav-item p-2">
-          <%= link_to "Logout", logout_path, method: :delete %>
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Add Task
+            </button>
+          <%= form_with data: {'task-form' => true}, url: user_tasks_path(current_user.id), html: {class: "dropdown-menu p-4", id: "new_task"} do |form| %>
+            <%= form.hidden_field :user_id, :value => current_user.id %>
+            <%= form.hidden_field :id, :value => params[:id] %>
+            <div class="form-group">
+            <%= form.label :summary %>
+            <%= form.text_field :summary %>
+            </div>
+            <div class="form-check">
+            <%= form.label :todo %>
+            <%= form.check_box :todo, {:checked => "checked"} %>
+            </div>
+            <div class="form-group">
+            <%= form.label :daily_task %>
+            <%= check_box_tag :daily_task %>
+            </div>
+            <div class="form-group">
+            <div id="todo_date" style="display:none;">
+              <%= form.label :date %>
+              <%= form.text_field :date, data:{ provide:'datepicker' } %>
+            </div>
+            </div>
+            <%= form.submit %>
+          <% end %>
+          </div>
         </li>
-        <li class="nav-item p-2">
-          <%= link_to "Week", user_week_path(user_id: current_user.id, id: current_user.weeks.last)%>
-        </li>
-        <li>
-          <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="bottom" data-content="<%= form_with data: {'task-form' => true}, url: user_tasks_path(current_user.id) do |form| %>
-  <%= form.hidden_field :user_id, :value => current_user.id %>
-  <%= form.hidden_field :id, :value => params[:id] %>
-  <%= form.label :summary %>
-  <%= form.text_field :summary %>
-  <%= form.label :todo %>
-  <%= form.check_box :todo, {:checked => "checked"} %>
-  <%= form.label :daily_task %>
-  <%= check_box_tag :daily_task %>
-  <div id="todo_date" style="display:none;">
-    <%= form.label :date %>
-    <%= form.text_field :date, data:{ provide:'datepicker' } %>
-  </div>
-  <%= form.submit %>
-<% end %>">
-  New Task
+      <li class="nav-item p-2">
+      <div class="dropdown show">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <%= current_user.email %>
         </button>
-        </li>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+          <%= link_to "Logout", logout_path, method: :delete, :class => "dropdown-item" %>
+          <%= link_to "Week", user_week_path(user_id: current_user.id, id: current_user.weeks.last), :class => "dropdown-item" %>
+        </div>
+      </div>
+      </li>
       <% end %>
     </div>
   </nav>
