--- a/app/views/weeks/_cal_week.html.erb
+++ b/app/views/weeks/_cal_week.html.erb
@@ -1,30 +1,19 @@
-  <div class="container">
-    <div class="row">
-    <% 7.times do |i| %>
-      <div class="col-sm-3" >
-      <div class="card my-2">
-        <div class="card-header">
-          <%= (@week.start.to_date + i).to_s %>
-        </div>
-        <div class="card-body">
-          <ul>
-            <% instance_variable_get("@day_events#{i}").each do |event| %>
-              <li><% if defined? event.start.date_time %>
-                    <%= event.start.date_time %>
-                  <% end %>
-                <%= event.summary %>
-                </li>
-            <% end %>
-          </ul>
-          <hr>
-          <ul>
-            <% instance_variable_get("@day_tasks#{i}").each do |task| %>
-              <li><%= task.summary%></li>
-            <% end %>
-          </ul>
-      </div>
-    </div>
-  </div>
+<ul>
+  <% instance_variable_get("@day_events#{i}").each do |event| %>
+    <li><% if defined? event.start.date_time %>
+      <%= event.start.date_time %>
+    <% end %>
+      <%= event.summary %>
+    </li>
   <% end %>
-  </div>
-</div>
+</ul>
+<hr>
+<ul >
+  <% instance_variable_get("@day_tasks#{i}").each do |task| %>
+    <%= form_for task, remote: true, method: :patch, :url => {:controller => "tasks", :action => "update", :id => task.id, :user_id => current_user.id, :week_id => params[:id]}, authenticity_token: true do |f| %>
+      <%= f.check_box :completed %>
+      <%= f.label :completed, task.summary %>
+      <%= link_to "(remove)", user_task_path(current_user, task, :week_id => params[:id]), method: :delete, data: {confirm: "Are you sure?"}, remote: true %>
+    <% end %>
+  <% end %>
+</ul>
