--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,5 +1,14 @@
 @import "bootstrap";
 
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  margin-bottom: 60px; /* Margin bottom by footer height */
+}
+
 .week_change {
     line-height: 24px;
     background: "blue";
@@ -8,4 +17,18 @@
 #complete_todo_list {
     label {
     text-decoration: line-through;}
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: #007bff;
+    color: white;
+}
+
+.footer a {
+    color: white;
 }
