--- a/app/views/days/_day.html.erb
+++ b/app/views/days/_day.html.erb
@@ -1,14 +1,14 @@
 <div class="col-sm-3" >
   <div class="card my-2">
     <div class="card-header">
-      <%= day.date %>
+      <%= day.date.to_date.strftime("%-m-%-d-%Y") %>
     </div>
     <div class="card-body" id="cal_content">
       <ul>
         <% @events.select{ |event| event.start.date == day.date || (if !(event.start.date_time.nil?) then event.start.date_time.to_date.to_s == day.date end)}.each do |event| %>
           <li>
-            <% if defined? event.start.date_time %>
-              <%= event.start.date_time %>
+            <% if !(event.start.date_time).nil? %>
+              <%= (event.start.date_time).strftime("%l:%M%p") %>
             <% end %>
             <%= event.summary %>
           </li>
