Update jQuery and AJAX functionality for tasks

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -14,9 +14,13 @@ body {
     background: "blue";
 }
 
-#complete_todo_list {
+#complete_todo_list, #complete_daily_task {
     label {
     text-decoration: line-through;}
+}
+
+.update_button {
+    display: none;
 }
 
 .footer {
