--- a/app/views/days/_day.html.erb
+++ b/app/views/days/_day.html.erb
@@ -15,9 +15,12 @@
         <% end %>
       </ul>
       <hr>
-      <ul>
-        <%= render @tasks.where("date = ?", day.date) %>
-      </ul>
+        <div id="incomplete_daily_task">
+          <%= render @tasks.where("date = ? AND completed = ?", day.date, false) %>
+        </div>
+        <div id="complete_daily_task">
+          <%= render @tasks.where("date = ? AND completed = ?", day.date, true) %>
+        </div>
     </div>
   </div>
 </div>
