--- a/app/views/days/_day.html.erb
+++ b/app/views/days/_day.html.erb
@@ -1,4 +1,4 @@
-<div class="col-lg-3" >
+<div class="col-md-3" >
   <div class="card my-2">
     <div class="card-header">
       <%= day.date.to_date.strftime("%-m-%-d-%Y") %>
