--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,13 +32,17 @@
             <%= form.label :summary %>
             <%= form.text_field :summary %>
             </div>
+            <div class="form-group">
+              <%= form.label :task_type %>
+              <%= form.select :task_type, options_for_select([['Home Task', 'home'], ['Work Task', 'work'], ['Need to Buy', 'buy']]), :class => "form-control" %>
+            </div>
             <div class="form-check">
             <%= form.label :todo %>
             <%= form.check_box :todo, {:checked => "checked"} %>
             </div>
             <div class="form-group">
             <%= form.label :daily_task %>
-            <%= check_box_tag :daily_task %>
+            <%= form.check_box :daily_task, {:id => "daily_task"} %>
             </div>
             <div class="form-group">
             <div id="todo_date" style="display:none;">
