--- a/app/views/days/_day.html.erb
+++ b/app/views/days/_day.html.erb
@@ -1,5 +1,5 @@
-<div class="col-lg-3" >
-  <div class="card my-2" id="<%= day.date %>">
+<div class="col-lg-3 col-md-12 d-flex align-items-stretch" >
+  <div class="card my-2 w-100" id="<%= day.date %>">
     <div class="card-header">
       <%= day.date.to_date.strftime("%-m-%-d-%Y") %>
     </div>
