--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,8 @@
   <head>
     <title>Week-to-Week</title>
     <%= csrf_meta_tags %>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -62,6 +63,7 @@
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
           <%= link_to "Logout", logout_path, method: :delete, :class => "dropdown-item" %>
           <%= link_to "Week", user_week_path(user_id: current_user.id, id: current_user.weeks.last), :class => "dropdown-item" %>
+          <%= link_to "Settings", user_settings_path(user_id: current_user.id), :class => "dropdown-item" %>
         </div>
       </div>
       </li>
