--- a/app/views/weeks/show.html.erb
+++ b/app/views/weeks/show.html.erb
@@ -13,8 +13,8 @@
 </div>
 <div class="container">
   <div class="row" id="todo_grid">
-    <div class="col-lg-4">
-      <div class="card my-2">
+    <div class="col-lg-4 d-flex align-items-stretch">
+      <div class="card my-2 w-100">
         <div class="card-header">
           Home To Do
         </div>
@@ -28,9 +28,9 @@
           </div>
         </div>
       </div>
-      </div>
-          <div class="col-lg-4">
-            <div class="card my-2">
+    </div>
+          <div class="col-lg-4 d-flex align-items-stretch">
+            <div class="card my-2 w-100">
         <div class="card-header">
           Work To Do
         </div>
@@ -45,8 +45,8 @@
         </div>
       </div>
       </div>
-          <div class="col-lg-4">
-            <div class="card my-2">
+          <div class="col-lg-4 d-flex align-items-stretch">
+            <div class="card my-2 w-100">
         <div class="card-header">
           Need to Buy
         </div>
