Update static page views

--- a/app/views/days/_day.html.erb
+++ b/app/views/days/_day.html.erb
@@ -1,7 +1,7 @@
-<div class="col-lg-3 col-md-12 d-flex align-items-stretch" >
+<div class="col-lg-3 col-md-12 d-flex align-items-stretch " >
   <div class="card my-2 w-100" id="<%= day.date %>">
     <div class="card-header">
-      <%= day.date.to_date.strftime("%-m-%-d-%Y") %>
+      <%= day.date.to_date.strftime("%a %-m-%-d-%Y") %>
     </div>
     <div class="card-body" id="cal_content">
       <ul>
