--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,7 @@
-<ul>
-  <% @calendar_list.items.each do |calendar| %>
-    <li><%= calendar.summary %> (<%= calendar.id %>)</li>
-  <% end %>
-</ul>
+<div class="container">
+  <ul>
+    <% @calendar_list.items.each do |calendar| %>
+      <li><%= calendar.summary %> (<%= calendar.id %>)</li>
+    <% end %>
+  </ul>
+</div>
