--- a/app/views/weeks/show.html.erb
+++ b/app/views/weeks/show.html.erb
@@ -7,7 +7,7 @@
   </nav>
 </div>
 <div class="container">
-  <div class="row" id="cal_grid">
+  <div class="row justify-content-center" id="cal_grid">
     <%= render @days %>
   </div>
 </div>
