--- a/app/views/users/settings.html.erb
+++ b/app/views/users/settings.html.erb
@@ -11,7 +11,7 @@
                     <%= f.label sum, "#{sum}" %>
                 </div>
             <% end %>
-            <%= f.submit %>
+            <%= f.submit :Update %>
         <% end %>
     </div>
 </div>
